# mixmatch-OD

./: .gitignore  README.md  data.py  devenv.nix  main.py  myyolo.py  pyproject.toml  train.py
rpcruz_legacy/: utils.py
