[project]
name = "mixmatch-od"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.2.1",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-box>=7.3.2",
    "retry>=0.9.2",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scikit-survival>=0.24.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchio>=0.20.16",
    "torchmetrics>=1.7.3",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
    "hydra-core>=1.3.2",
    "plotly>=6.3.0",
    "IPython"
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
